// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Control should render 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-l56akm-3 kWZzWb"
  >
    <input
      class="CardControl__Input-l56akm-0 kIMKII"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="CardControl__CustomCard-l56akm-1 vtDHp"
    >
      <button
        class="Cardstyles__CardButton-ajtauu-0 glZyeH"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </label>
</DocumentFragment>
`;

exports[`Card Control should render with a control state 1`] = `
<DocumentFragment>
  <label
    class="CardControl___StyledLabel-l56akm-3 kWZzWb grid"
  >
    <input
      class="CardControl__Input-l56akm-0 kIMKII"
      data-testid="card-control__undefined"
      type="checkbox"
      value=""
    />
    <div
      class="CardControl__CustomCard-l56akm-1 vtDHp"
    >
      <button
        class="Cardstyles__CardButton-ajtauu-0 glZyeH"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col justify-between items-center h-full"
        >
          <span>
            Bitcoin
          </span>
          <div
            class="CardControl__StateStyle-l56akm-2 eBxqrj"
            data-testid="card__control-state"
          >
            <div
              class="sc-bdfBwQ dnaihB"
              height="1em"
              width="1em"
            >
              <svg>
                checkmark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </label>
</DocumentFragment>
`;
